<resources>
    <string name="app_name">Counter App</string>
    <string name="counter_app">Counter App</string>
    <string name="time_to_count_second">Time to Count (Second)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="set_time">Set Time</string>
    <string name="pause">Pause</string>
    <string name="field_required">Field Required</string>
</resources>